# llm-kakao-bots

./: .env.example  .gitignore  README.md  build-all.sh  docker-compose.prod.yml  jaeger-config.yaml  jaeger-ui-config.json  prometheus.yml  pytest.ini
.agent/workflows/: comment-rules.md
20q-kakao-bot/: .editorconfig  .env.example  .gitignore  CONVENTIONS.md  Dockerfile  Dockerfile.dev  bot-common.sh  bot-restart.sh  bot-start.sh  bot-status.sh  bot-stop.sh  build.gradle.kts  cleanup-gemini-caches.sh  detekt-baseline.xml  docker-compose.dev.yml  docker-compose.yml  gradle.properties  qodana.yaml  settings.gradle.kts  start-app.sh
20q-kakao-bot/.git.bak/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
20q-kakao-bot/backups/: 20q_selected-20251208-1514.dump
20q-kakao-bot/scripts/: compress-old-logs.sh  detekt-cli.sh
admin-dashboard/: Dockerfile  README.md
admin-dashboard/backend/: .golangci.yml  Makefile  go.mod  go.sum
docs/: go-migration-plan.md  uds-support.md
game-bot-go/: .air.turtlesoup.toml  .air.twentyq.toml  .dockerignore  .golangci.yml  CONVENTIONS.md  Dockerfile.prod  Makefile  README.md  go.mod  go.sum  tools.go
hololive-kakao-bot-go/: .dockerignore  .env.example  .gitignore  .golangci.bck.yml  .golangci.yml  CONVENTIONS.md  Dockerfile  LICENSE  Makefile  README.md  config.example.json  docker-compose.yml  go.mod  go.sum  official_japanese_names.json
mcp-llm-server/: .env.example  .gitignore  =0.7.0  AGENT.MD  CONVENTIONS.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
mcp-llm-server-go/: .dockerignore  .gitignore  .golangci.yml  Dockerfile.prod  Makefile  coverage.out  go.mod  go.sum  migration-plan.md
mcp-llm-server/examples/: basic_usage.py
mcp-llm-server/scripts/: common.sh  health_monitor.py  logs-clean.sh  logs-errors.sh  logs-tail.sh  logs.sh  restart.sh  rewrite_puzzles.py  start.sh  status.sh  stop.sh  test_session.py  test_twentyq.py
mcp-llm-server/src/mcp_llm_server/: __init__.py  exceptions.py  health.py  http_server.py  middleware.py  types.py
mcp-llm-server/src/mcp_llm_server/client/: __init__.py  llm_client.py
mcp-llm-server/src/mcp_llm_server/config/: __init__.py  logging.py  settings.py
mcp-llm-server/src/mcp_llm_server/domains/: __init__.py
mcp-llm-server/src/mcp_llm_server/domains/turtle_soup/: __init__.py  models.py  prompts.py  puzzle_loader.py
mcp-llm-server/src/mcp_llm_server/domains/turtle_soup/prompts/: answer.yml  generate.yml  hint.yml  reveal.yml  rewrite.yml  validate.yml
mcp-llm-server/src/mcp_llm_server/domains/turtle_soup/puzzles/: 1.json  2.json
mcp-llm-server/src/mcp_llm_server/domains/twentyq/: __init__.py  models.py  prompts.py
mcp-llm-server/src/mcp_llm_server/domains/twentyq/prompts/: answer.yml  hints.yml  normalize.yml  synonym-check.yml  verify-answer.yml
mcp-llm-server/src/mcp_llm_server/infra/: __init__.py  bot_health_monitor.py  callbacks.py  gemini_client.py  injection_guard.py  korean_nlp.py  langgraph_session.py  rulepack_loader.py  usage_repository.py
mcp-llm-server/src/mcp_llm_server/models/: __init__.py  error.py  guard.py  stream.py
mcp-llm-server/src/mcp_llm_server/routes/: __init__.py  dependencies.py  guard.py  health.py  llm.py  nlp.py  session.py  usage.py
mcp-llm-server/src/mcp_llm_server/tools/: __init__.py
mcp-llm-server/src/mcp_llm_server/utils/: __init__.py  decorators.py  prompts.py  session.py  text.py  toon.py  unicode.py
mcp-llm-server/tests/: __init__.py  conftest.py  test_config_settings.py  test_domains_turtle_soup_models.py  test_domains_turtle_soup_prompts.py  test_domains_twentyq_models.py  test_domains_twentyq_prompts.py  test_health.py  test_http_server.py  test_infra_gemini_client.py  test_infra_injection_guard.py  test_infra_langgraph_session.py  test_infra_rulepack_loader.py  test_infra_usage_repository.py  test_korean_nlp.py  test_models_guard.py  test_puzzle_loader.py  test_utils_decorators.py  test_utils_text.py  test_utils_toon.py  test_utils_unicode.py
turtle-soup-bot/: .editorconfig  .env.example  .gitignore  AGENT.MD  CONVENTIONS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  bot-common.sh  bot-restart.sh  bot-start.sh  bot-status.sh  bot-stop.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
watchdog/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  Makefile  config.json  go.mod  go.sum  login.ps1  main.go  rolling.ps1  wire.go  wire_gen.go  wire_providers.go
(+1368 files in other folders)
